--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-/** {
-  margin: 0px;
-  padding: 0px;
-}*/
-
 .intro-text {
   font-size: 2em;
 }
@@ -17,12 +12,6 @@
 }
 
 .container {
-  /*width: auto;*/
-  /*padding-left: 50px;
-  padding-right: 50px;*/
-  /*padding-bottom: 40px;
-  margin-bottom: 38px;*/
-  /*background-color: #1592a9;*/
   height: 100%;
   width: 80%;
   margin: 0px;
@@ -73,16 +62,29 @@ input[type='text']{
   border:#ccc solid 1px;
 }
 
-input[type='radio'] {
-  padding: 15px;
+input[type="radio"]{
+  margin-left: 8px;
 }
 
-/*input .radio-buttons {
-  margin-left: 12px;
-  padding: 10px;
-}*/
+
+/*input.radio-buttons {
+  margin-left: 8px;
+  /*padding: 10px;*/
+
 
 .submit-button{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: auto;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-size: 1.4em;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.done-button {
   display: block;
   margin-right: auto;
   margin-left: auto;
